<?xml version="1.0"?>
<package format="2">

    <name>atturtle_control</name>
    <version>0.1.0</version>
    <description>The atturtle_control package</description>

    <maintainer email="buynak.9@osu.edu">acbuynak @ The Ohio State University</maintainer>
    <license>Apache 2.0</license>
    <url type="AIMS Website">https://cdme.osu.edu/aims-lab</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>roscpp</exec_depend>

    <exec_depend>tf2</exec_depend>
    <exec_depend>nav_msgs</exec_depend>

</package>
