<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>atturtle_description</name>
    <version>0.0.0</version>
    <description>
        ATturtle Robot Description Package
    </description>

    <maintainer email="acbuynak@gmail.com">acbuynak</maintainer>

    <license>Apache License 2.0</license>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
